Mon Sep 22 09:28:43 2014  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c ({send,recv}msg_args_struct): 24 => 16 bytes
	* ext/socket/init.c (connect_arg): ditto
	* ext/socket/raddrinfo.c (getnameinfo_arg): 56 => 48 bytes
	  (reductions only for 64-bit systems)

Mon Sep 22 02:04:25 2014  Tanaka Akira  <akr@fsij.org>

	* lib/drb/drb.rb: Support graceful shutdown.
	  (DRbTCPSocket#initialize): Create a pipe for shutdown notification.
	  (DRbTCPSocket#close): Invoke close_shutdown_pipe.
	  (DRbTCPSocket#close_shutdown_pipe): New private method.
	  (DRbTCPSocket#accept): Use accept_or_shutdown.
	  (DRbTCPSocket#accept_or_shutdown): New private method which returns
	  nil on shutdown.
	  (DRbServer#stop_service): Use shutdown instead of Thread#kill.
	  (DRbServer#run): Break infinite loop when main_loop returns nil.
	  (DRbServer#main_loop): @protocol.accept may return nil.

	* lib/drb/ssl.rb: Follow above change.

	* lib/drb/unix.rb: Ditto.

Sun Sep 21 13:54:36 2014  Masaki Matsushita <glass.saga@gmail.com>

	* time.c: raise exception when minutes of utc_offset is out of 00-59.
	  patch is from Kenichi Kamiya.
	  [ruby-dev:47539] [Bug #8679]

	* test/ruby/test_time.rb: test for above.
	  patch is from Kenichi Kamiya.

Sun Sep 21 19:04:08 2014  Narihiro Nakamura <authornari@gmail.com>

	* st.c (do_hash_bin): unused macro.

Sun Sep 21 18:45:01 2014  Narihiro Nakamura <authornari@gmail.com>

	* parse.y (parser_class_nest): unused variable after YARV
	  merged (r11439).

Sun Sep 21 18:14:03 2014  Narihiro Nakamura <authornari@gmail.com>

	* st.c (numberof): unused. internal.h has same macro.

	* node.c (F_CUSTOM2): unused.

Sun Sep 21 14:11:23 2014  Tanaka Akira  <akr@fsij.org>

	* thread_pthread.c (native_set_thread_name): New function to
	  set thread name visible with ps command on GNU/Linux.
	  Ex. ps -o %c -L

	* thread.c (thread_start_func_2): Call native_set_thread_name at
	  beginning.
	  (rb_thread_inspect_msg): Extract from rb_thread_inspect.
